# RoboCup2018RVRL_Demo

./: Install.md  README.md  install  setup.bash
Network/: client1-server1  client1-server1.md  client2-server2  client2-server2.md  client3-server3  client3-server3.md  server1.md  server2.md  server3.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/hector_gazebo_plugins/: GNSSConfig.h
models_robots_victims/out_1/: model.config  model.sdf  outer_maze_circ.stl
src/bring_up/: package.xml
src/bring_up/defs/: pioneer3at.urdf.xacro  pioneer3at_body.xacro
src/bring_up/launch/: geotiff_creator.launch  geotiff_mapper.launch  p3at_2.launch  p3at_3.launch
src/bring_up/maps/test/: mrl_merged_map_13_08_57.tif  mrl_merged_map_13_08_57_victims.csv  mrl_merged_map_13_14_36.tfw  mrl_merged_map_13_14_36.tif  mrl_merged_map_13_52_56.tfw  mrl_merged_map_13_52_56_victims.csv  mrl_merged_map_14_00_35.tfw  mrl_merged_map_14_00_35.tif  mrl_merged_map_14_10_31.tif  mrl_merged_map_14_25_49_victims.csv  mrl_merged_map_14_35_52_victims.csv  mrl_merged_map_14_46_11.tfw  mrl_merged_map_14_46_11.tif  mrl_merged_map_16_53_15_victims.csv  mrl_merged_map_16_53_51_victims.csv  mrl_merged_map_16_54_59.tif
src/bring_up/worlds/: indoor_light_victims_4_robots_centaur.world  indoor_light_victims_4_robots_org.world  super_world.world
src/hector_quadrotor_gazebo_plugins/: CMakeLists.txt
src/quadrotor_description/: CMakeLists.txt  package.xml
src/robot_gazebo/: package.xml
src/victim175/: CMakeLists.txt  package.xml
workspace/devel/: .catkin  .rosinstall  setup.sh
(+351 files in other folders)
